# wasm-perf

./: .gitignore  demo_go  go.mod  stat.py  test.sh
native/: CMakeLists.txt  agent_udp.c  client_udp.c  server_udp.c
wasm/: Dockerfile  demo.aot  demo.c  demo.go  demo.wasm  udp.c
